# zoho-recruit-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  claude_config.json  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  server.py  services.py
src/auth/: __init__.py  zoho_auth.py
src/models/: __init__.py  candidate.py  job.py
src/tools/: __init__.py  ai_tools.py  analytics_tools.py  candidate_tools.py  email_tools.py  interview_tools.py  job_tools.py
src/utils/: error_handler.py  logger.py
src/zoho/: __init__.py  ai_helpers.py  candidates.py  client.py  common.py  email.py  interviews.py  jobs.py  reports.py
tests/: __init__.py  conftest.py  test_auth.py  test_candidate_tools.py  test_client.py  test_integration.py
